[package]
name    = "try-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
ctrlc        = "*"
signal-hook  = "*"
daemonize    = "*"
daemonize-me = "*"
nix          = { version = "*", features = ["signal"] }
serde        = { version = "*", features = ["derive"] }
toml         = "*"
bincode      = "2.0.1"


# [[bin]]
# name = "s"
# path = "src/bin/sock-daemon.rs"

[[bin]]
name = "c"
path = "src/bin/sock-cli.rs"

[[bin]]
name = "pm"
path = "src/bin/pm.rs"

[[bin]]
name = "try-lock"
path = "src/bin/try-lock.rs"

[[bin]]
name = "try-file"
path = "src/bin/try-file.rs"

[[bin]]
name = "try-slice"
path = "src/bin/try-slice.rs"
