[package]
name    = "try-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
ctrlc        = "*"
signal-hook  = "*"
daemonize    = "*"
daemonize-me = "*"
nix          = { version = "*", features = ["signal"] }
serde        = { version = "*", features = ["derive"] }
toml         = "*"
bincode      = "2.0.1"
prettytable = "0.10.0"
tabled = "0.20.0"
ratatui = "0.29.0"
color-eyre = "0.6.5"
crossterm = "0.29.0"
cursive = "0.21.1"
termion = "4.0.5"


# [[bin]]
# name = "s"
# path = "src/bin/sock-daemon.rs"

# [[bin]]
# name = "c"
# path = "src/bin/sock-cli.rs"

[[bin]]
name = "pm"
path = "src/bin/pm.rs"

[[bin]]
name = "try-lock"
path = "src/bin/try-lock.rs"

[[bin]]
name = "try-file"
path = "src/bin/try-file.rs"

[[bin]]
name = "try-slice"
path = "src/bin/try-slice.rs"

[[bin]]
name = "try-ratatui"
path = "src/bin/try-ratatui.rs"

[[bin]]
name = "try-crossterm"
path = "src/bin/try-crossterm.rs"

[[bin]]
name = "try-cursive"
path = "src/bin/try-cursive.rs"

